--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ image:
   - Visual Studio 2017
 
 configuration:
-  - Release
+  #  - Release
   - Debug
 
 platform:
@@ -34,7 +34,8 @@ init:
   - echo %generator%
 
   - curl -k -O rem curl -k -O https://zlib.net/zlib-%version%.tar.gz
-  - 7z x zlib*.gz -so | 7z x -aoa -si -ttar
+  - 7z x zlib*.gz
+  - 7z x zlib*.tar
   - cd zlib-%version%
   - md build
   - cd build
