--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ init:
   - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2013" ( set generator="Visual Studio 12 2013%arch%" )
   - echo %generator%
 
-  - curl -k -O rem curl -k -O https://zlib.net/zlib-%version%.tar.gz
+  - curl -k -O https://zlib.net/zlib-%version%.tar.gz
   - 7z x zlib*.gz
   - 7z x zlib*.tar
   - cd zlib-%version%
