--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ init:
   - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2013" ( set generator="Visual Studio 12 2013%arch%" )
   - echo %generator%
   - md %clone_folder%\install
-  - subst p: %clone_folder%\install
+  - cmd /c subst p: %clone_folder%\install
 
 
 build_script:
