--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ init:
   - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2013" ( set generator="Visual Studio 12 2013%arch%" )
   - echo %generator%
   - md %clone_folder%\install
-  - cmd /c "subst p: %clone_folder%\install"
+  - cmd /c subst p: c:\projects\zlib\install
 
 
 build_script:
