--- a/appveyor.yml
+++ b/appveyor.yml
@@ -54,14 +54,14 @@ build_script:
   #- echo cmake .. -G %generator%
   #- cmake .. -G %generator%
   - echo cmake .. -G %generator%
-  - cmake -DCMAKE_INSTALL_PREFIX=p:\prj\libs\zlib .. -G %generator%
-  - cmake  --build . --config Release
-  - cmake  --build . --config Debug
-  - cmake --build . --config Release --target INSTALL
+  ##- cmake -DCMAKE_INSTALL_PREFIX=p:\prj\libs\zlib .. -G %generator%
+  ##- cmake  --build . --config Release
+  ##- cmake  --build . --config Debug
+  ##- cmake --build . --config Release --target INSTALL
 
 
-    #  - dir/s
   - cd ..
+  - dir/s
   - dir/s *.exe *.lib *.pdb
 
 #artifacts:
