--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,6 +35,7 @@ init:
   - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2013" ( set generator="Visual Studio 12 2013%arch%" )
   - echo %generator%
   - md %clone_folder%\install
+  - echo %clone_folder%\install
 
 
 build_script:
@@ -61,6 +62,8 @@ build_script:
   ##- cd ..
   ##- dir/s *.exe *.lib *.pdb
   - cd %clone_folder%
+  - dir
+  - cd c:\projects\zlib
   - dir
 
 #artifacts:
