--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,7 +49,7 @@ build_script:
 
   - md c:\projects\zlib\install
   - echo c:\projects\zlib\install
-  - subst p: c:\projects\zlib\install
+  - cmd/c subst p: c:\projects\zlib\install
   - dir p:
   #- cmake -DCMAKE_BUILD_TYPE=Release .. -G %generator%
 
