--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,7 +37,7 @@ init:
   - md c:\projects\zlib\install
   - echo c:\projects\zlib\install
   - cmd: 
-    - SUBST P^: c:\projects\zlib
+    - "SUBST P: c:\projects\zlib"
     - SUBST P: c:\projects\zlib
 
 
