update current folder 01

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,7 +68,8 @@ build_script:
   - cmake -DCMAKE_INSTALL_PREFIX=%ipath%\tmp .. -G %generator64%
   - cmake --build . --config Debug --target INSTALL
   - cd ..
-  - cmd: cfiles zlib %version% x86 mdd -s include lib\zlibstaticd.lib
+  - cd 
+  - cmd: cfiles.bat zlib %version% x86 mdd -s include lib\zlibstaticd.lib
 
   - set
   - cd c:\projects\zlib
