--- a/appveyor.yml
+++ b/appveyor.yml
@@ -67,18 +67,20 @@ build_script:
   - cd build64
   - cmake -DCMAKE_INSTALL_PREFIX=%ipath%\tmp .. -G %generator64%
   - cmake --build . --config Debug --target INSTALL
-  - cd ..
-  - cd 
-  - cmd: ..\cfiles.bat zlib %version% x86 mdd -s include lib\zlibstaticd.lib
+  - cmd: ..\..\cfiles.bat zlib %version% x64 mdd -s include lib\zlibstaticd.lib
+  ##- cmake --build . --config Release --target INSTALL
+  ##- cmd: ..\..\cfiles.bat zlib %version% x64 md  -s include lib\zlibstatic.lib
 
   - set
   - cd c:\projects\zlib
   - dir
   - dir p:\ /s
+  - cd /d p:\
+  - 7z a zlib-%version%.zip prj\zlib\%version%\include prj\zlib\%version%\lib
 
 
-#artifacts:
-#  - path: '**\*.exe'
+artifacts:
+  - path: '**\*.zip'
 #  - path: '**\*.lib'
 
 
